gitops/espresso/apps/stalwart/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-mta-sts
  namespace: stalwart
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - mta-sts.michaelbrusegard.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/mta-sts.txt
      backendRefs:
        - name: stalwart-internal
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-autoconfig
  namespace: stalwart
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - autoconfig.michaelbrusegard.com
    - autodiscover.michaelbrusegard.com
    - autoconfig.manafishrov.com
    - autodiscover.manafishrov.com
  rules:
    - backendRefs:
        - name: stalwart-internal
          port: 8080
